<resources>
    <string name="app_name">BlechWikiDK</string>
    <string name="action_update">update</string>
    <string name="settings">Settings</string>
    <string name="eglieder">EGLieder</string>
    <string name="titel">Titel</string>
    <string name="b_cher">Bücher</string>
    <string name="komponisten">Komponisten</string>
    <string name="downloading">Downloading...</string>
    <string name="title_file_download">APK is downloading</string>
    <string name="storage_access_required">Storage access is required to downloading the file.</string>
    <string name="storage_permission_denied">Storage permission request was denied.</string>
    <string name="ok">OK</string>
    <string name="egliedertextsearch">EGLiederTextsearch</string>
    <string name="egliedermain">egliedermain</string>
</resources>
